--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.hanks:passcodeview:0.1.2'
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
+    implementation 'androidx.biometric:biometric:1.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
